fix(cmp/modal): fix styles for modal on mobile

--- a/components/cmp/modal/src/index.scss
+++ b/components/cmp/modal/src/index.scss
@@ -4,8 +4,6 @@
 
 $bgc-sui-cmp-modal: rgba(33, 41, 52, 0.85) !default;
 $fz-sui-cmp-modal-inner: $fz-m !default;
-$fz-sui-cmp-modal-title: $fz-xxl !default;
-$lh-sui-cmp-modal-title: $lh-xxl !default;
 $w-sui-cmp-modal-logo: 150px !default;
 $maw-sui-cmp-modal-logo: 150px !default;
 $mah-sui-cmp-modal-logo: 40px !default;
@@ -186,11 +184,17 @@ $mah-sui-cmp-modal-logo: 40px !default;
 
   &-title {
     color: $c-black;
-    font-size: $fz-sui-cmp-modal-title;
+    font-size: $fz-l;
+    line-height: $lh-l;
     font-weight: $fw-semi-bold;
-    line-height: $lh-sui-cmp-modal-title;
     margin: 0;
+    padding-bottom: $p-s;
     text-align: left;
+
+    @include media-breakpoint-up(m) {
+      font-size: $fz-xl;
+      line-height: $lh-xl;
+    }
   }
 
   @media (min-width: 769px) {
